--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -79,9 +79,9 @@
         "\n",
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
-        "\n",
-        "  %cd models/Stable-diffusion\n",
         "  ############# Requirements SDZ\n",
+        "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
+        "  %cd models/Stable-diffusion\n",
         "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
         "    !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
         "    !pip install open-clip-torch\n",
@@ -99,7 +99,7 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  %cd extensions\n",
-        "  #!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "\n",
         "  if SDZ_Dreambooth:\n",
         "    os.chdir(SDZ_webui_path)\n",
@@ -114,7 +114,7 @@
         "\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
-        "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Dreambooth_Fix:\n",
