--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -49,7 +49,7 @@
         "models_dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
-        "SDZ_Dreambooth_Fix = False #@param {type:\"boolean\"}\n",
+        "#SDZ_Dreambooth_Fix = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Model_Fix = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -102,16 +102,15 @@
         "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "\n",
         "  if SDZ_Dreambooth:\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
-        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
-        "      !bash ./py310.sh -b -f -p /usr/local\n",
-        "      !python -m ipykernel install --name \"py310\" --user\n",
-        "      !conda install -c \"xformers/label/dev\" xformers -y\n",
-        "      !pip install open-clip-torch\n",
-        "      !pip install triton\n",
-        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
-        "\n",
+        "    #os.chdir(SDZ_webui_path)\n",
+        "    #if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "    #!wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "    #!bash ./py310.sh -b -f -p /usr/local\n",
+        "    #!python -m ipykernel install --name \"py310\" --user\n",
+        "    #!conda install -c \"xformers/label/dev\" xformers -y\n",
+        "    #!pip install open-clip-torch\n",
+        "    #!pip install triton\n",
+        "    #!sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
@@ -142,8 +141,6 @@
         "  !python launch.py $share\n",
         "elif SDZ_Version == \"V2.1\":\n",
         "  !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
-        "  #!sed -i 's@\"multiple_tqdm\": true,@\\\"multiple_tqdm\": false,@' $SDZ_webui_path'/config.json'\n",
-        "  #!sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
         "  !python launch.py $share $SDZconfigV2\n"
       ],
       "metadata": {
