--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -80,6 +80,7 @@
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
         "  ############# Requirements SDZ\n",
+        "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "  %cd models/Stable-diffusion\n",
         "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
@@ -116,22 +117,22 @@
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
         "\n",
-        "  if SDZ_Dreambooth_Fix:\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "    with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
-        "      filedata = file.read()\n",
-        "      filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
-        "    with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
-        "      file.write(filedata)\n",
-        "  else:\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "  #if SDZ_Dreambooth_Fix:\n",
+        "    #os.chdir(SDZ_webui_path)\n",
+        "    #!wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "    #with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
+        "      #filedata = file.read()\n",
+        "      #filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
+        "    #with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
+        "      #file.write(filedata)\n",
+        "  #else:\n",
+        "    #os.chdir(SDZ_webui_path)\n",
+        "    #!wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "      \n",
-        "  if SDZ_Big_Model_Fix:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "  else:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "  #if SDZ_Big_Model_Fix:\n",
+        "    #!sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "  #else:\n",
+        "    #!sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    \n",
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
