--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -130,10 +130,10 @@
         "    #os.chdir(SDZ_webui_path)\n",
         "    #!wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "      \n",
-        "  #if SDZ_Big_Model_Fix:\n",
-        "    #!sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "  #else:\n",
-        "    #!sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "  if SDZ_Big_Model_Fix:\n",
+        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "  else:\n",
+        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    \n",
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
@@ -149,7 +149,7 @@
         "cellView": "form",
         "id": "uzksUSareb5K"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
