--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -104,19 +104,15 @@
         "  %cd ..\n",
         "\n",
         "  if SDZ_Dreambooth:\n",
-        "    #os.chdir(SDZ_webui_path)\n",
-        "    #if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
-        "    #!wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
-        "    #!bash ./py310.sh -b -f -p /usr/local\n",
-        "    #!python -m ipykernel install --name \"py310\" --user\n",
-        "    #!conda install -c \"xformers/label/dev\" xformers -y\n",
-        "    #!pip install open-clip-torch\n",
-        "    #!pip install triton\n",
-        "    #!sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
+        "\n",
+        "  if SDZ_Big_Model_Fix:\n",
+        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "  else:\n",
+        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "\n",
         "  #if SDZ_Dreambooth_Fix:\n",
         "    #os.chdir(SDZ_webui_path)\n",
@@ -130,11 +126,17 @@
         "    #os.chdir(SDZ_webui_path)\n",
         "    #!wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "      \n",
-        "  if SDZ_Big_Model_Fix:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "  else:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "    \n",
+        "  #if SDZ_Dreambooth_py310:\n",
+        "    #os.chdir(SDZ_webui_path)\n",
+        "    #if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "    #!wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "    #!bash ./py310.sh -b -f -p /usr/local\n",
+        "    #!python -m ipykernel install --name \"py310\" --user\n",
+        "    #!conda install -c \"xformers/label/dev\" xformers -y\n",
+        "    #!pip install open-clip-torch\n",
+        "    #!pip install triton\n",
+        "    #!sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "\n",
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
