--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -53,7 +53,7 @@
         "SDZ_Big_Model_Fix = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --no-half-vae\" + \" --ckpt=\" + model_init + \" --ckpt-dir=\" + models_dir + \" \" + SDZ_Args\n",
+        "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + model_init + \" --ckpt-dir=\" + models_dir + \" \" + SDZ_Args\n",
         "\n",
         "if not SDZ_Continue: \n",
         "  with capture.capture_output() as cap:\n",
