--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -84,7 +84,8 @@
         "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "  %cd models/Stable-diffusion\n",
         "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
-        "    !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
+        "    #!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
+        "    !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103-cp38-cp38-linux_x86_64.whl\n",
         "    !pip install open-clip-torch\n",
         "\n",
         "  if Download_Base_Model == \"V1.5\":\n",
@@ -107,6 +108,9 @@
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    import os\n",
+        "    os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "    !pip install triton==2.0.0.dev20221202.\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Big_Model_Fix:\n",
