--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -50,6 +50,7 @@
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
         "#SDZ_Dreambooth_Fix = False #@param {type:\"boolean\"}\n",
+        "#SDZ_Dreambooth_py310 = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Model_Fix = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -81,6 +82,7 @@
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
         "  ############# Requirements SDZ\n",
+        "  !pip install triton==2.0.0.dev20221202.\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "  %cd models/Stable-diffusion\n",
@@ -109,9 +111,8 @@
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
-        "    import os\n",
-        "    os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "    !pip install triton==2.0.0.dev20221202.\n",
+        "    #import os\n",
+        "    #os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Big_Model_Fix:\n",
