--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -111,8 +111,8 @@
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
-        "    #import os\n",
-        "    #os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "    import os\n",
+        "    os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Big_Model_Fix:\n",
