--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -85,10 +85,6 @@
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "  \n",
-        "  #!sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
-        "  #!sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'/content/gdrive/MyDrive/sd/stable-diffusion-webui/webui.py\n",
-        "  #!sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
-        "  \n",
         "  !pip install triton==2.0.0.dev20221202.\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
@@ -96,7 +92,7 @@
         "  %cd models/Stable-diffusion\n",
         "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
         "    #!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
-        "    #!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103-cp38-cp38-linux_x86_64.whl\n",
+        "    !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103-cp38-cp38-linux_x86_64.whl\n",
         "    !pip install open-clip-torch\n",
         "\n",
         "  if Download_Base_Model == \"V1.5\":\n",
@@ -124,6 +120,10 @@
         "  if SDZ_Big_Model_Fix:\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    \n",
+        "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
+        "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'/content/gdrive/MyDrive/sd/stable-diffusion-webui/webui.py\n",
+        "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "  else:\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    !sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
