--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -92,8 +92,10 @@
         "  %cd models/Stable-diffusion\n",
         "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
         "    #!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
-        "    !pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103-cp38-cp38-linux_x86_64.whl\n",
+        "    #!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103-cp38-cp38-linux_x86_64.whl\n",
+        "    !pip install xformers==0.0.16rc425\n",
         "    !pip install open-clip-torch\n",
+        "\n",
         "\n",
         "  if Download_Base_Model == \"V1.5\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
