--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -110,6 +110,7 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  %cd extensions\n",
+        "  !git clone https://github.com/Klace/stable-diffusion-webui-instruct-pix2pix.git\n",
         "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "  %cd ..\n",
         "\n",
