--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -45,13 +45,10 @@
         "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
         "\n",
-        "model_init = \"\" #@param {type:\"string\"}\n",
-        "models_dir = \"\" #@param {type:\"string\"}\n",
+        "model_init = \"/content/drive/Shareddrives/DATA_LOST/modelz/instruct-pix2pix-00-22000.safetensors\" #@param {type:\"string\"}\n",
+        "models_dir = \"/content/drive/Shareddrives/DATA_LOST/modelz\" #@param {type:\"string\"}\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
-        "#SDZ_Dreambooth_Fix = False #@param {type:\"boolean\"}\n",
-        "#SDZ_Dreambooth_py310 = False #@param {type:\"boolean\"}\n",
-        "SDZ_Big_Model_Fix = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + model_init + \" --ckpt-dir=\" + models_dir + \" \" + SDZ_Args\n",
@@ -70,13 +67,13 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
         "    \n",
         "    clear_output()\n",
-        "  print('\u001b[1;96mInstalling SDZ ✓')\n",
+        "  print('[1;96mInstalling SDZ ✓')\n",
         "\n",
         "if SDZ_Continue:\n",
         "  with capture.capture_output() as cap:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    clear_output()\n",
-        "  print('\u001b[1;96mPreparing SDZ Continue ✓')\n",
+        "  print('[1;96mPreparing SDZ Continue ✓')\n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
@@ -91,11 +88,8 @@
         "\n",
         "  %cd models/Stable-diffusion\n",
         "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
-        "    #!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+189828c.d20221207-cp38-cp38-linux_x86_64.whl\n",
-        "    #!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103-cp38-cp38-linux_x86_64.whl\n",
         "    !pip install xformers==0.0.16rc425\n",
         "    !pip install open-clip-torch\n",
-        "\n",
         "\n",
         "  if Download_Base_Model == \"V1.5\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
@@ -120,49 +114,15 @@
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
         "\n",
-        "  if SDZ_Big_Model_Fix:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
-        "    \n",
-        "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
-        "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'/content/gdrive/MyDrive/sd/stable-diffusion-webui/webui.py\n",
-        "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
-        "  else:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "    !sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
-        "\n",
-        "  #if SDZ_Dreambooth_Fix:\n",
-        "    #os.chdir(SDZ_webui_path)\n",
-        "    #!wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "    #with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'r') as file :\n",
-        "      #filedata = file.read()\n",
-        "      #filedata = filedata.replace('parameterization: \"v\"','#sdz')\n",
-        "    #with open(SDZ_webui_path+'/'+'v2-inference-v.yaml', 'w') as file:\n",
-        "      #file.write(filedata)\n",
-        "  #else:\n",
-        "    #os.chdir(SDZ_webui_path)\n",
-        "    #!wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "      \n",
-        "  #if SDZ_Dreambooth_py310:\n",
-        "    #os.chdir(SDZ_webui_path)\n",
-        "    #if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
-        "      #!wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
-        "      #!bash ./py310.sh -b -f -p /usr/local\n",
-        "      #!python -m ipykernel install --name \"py310\" --user\n",
-        "      #!conda install -c \"xformers/label/dev\" xformers -y\n",
-        "      #!pip install open-clip-torch\n",
-        "      #!pip install triton\n",
-        "      #!sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
-        "\n",
         "    clear_output()\n",
-        "print('\u001b[1;90mPreparing SDZ System ✓')\n",
+        "print('[1;90mPreparing SDZ System ✓')\n",
         "\n",
         "if SDZ_Version == \"V1.5\":\n",
         "  !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cpu\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
         "  !python launch.py $share\n",
         "elif SDZ_Version == \"V2.1\":\n",
         "  !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
-        "  !python launch.py $share $SDZconfigV2\n"
+        "  !python launch.py $share $SDZconfigV2"
       ],
       "metadata": {
         "cellView": "form",
