--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -45,8 +45,8 @@
         "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
         "\n",
-        "model_init = \"/content/drive/Shareddrives/DATA_LOST/modelz/instruct-pix2pix-00-22000.safetensors\" #@param {type:\"string\"}\n",
-        "models_dir = \"/content/drive/Shareddrives/DATA_LOST/modelz\" #@param {type:\"string\"}\n",
+        "model_init = \"\" #@param {type:\"string\"}\n",
+        "models_dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
@@ -67,13 +67,13 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
         "    \n",
         "    clear_output()\n",
-        "  print('[1;96mInstalling SDZ ✓')\n",
+        "  print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
         "if SDZ_Continue:\n",
         "  with capture.capture_output() as cap:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    clear_output()\n",
-        "  print('[1;96mPreparing SDZ Continue ✓')\n",
+        "  print('\u001b[1;96mPreparing SDZ Continue ✓')\n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
@@ -115,7 +115,7 @@
         "    %cd ..\n",
         "\n",
         "    clear_output()\n",
-        "print('[1;90mPreparing SDZ System ✓')\n",
+        "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
         "if SDZ_Version == \"V1.5\":\n",
         "  !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cpu\"):@' /usr/local/lib/python3.8/dist-packages/open_clip/factory.py\n",
