--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -49,6 +49,7 @@
         "models_dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
+        "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + model_init + \" --ckpt-dir=\" + models_dir + \" \" + SDZ_Args\n",
@@ -113,6 +114,17 @@
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
+        "\n",
+        "  if SDZ_Big_Models:\n",
+        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    \n",
+        "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
+        "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'/content/gdrive/MyDrive/sd/stable-diffusion-webui/webui.py\n",
+        "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
+        "  else:\n",
+        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "    !sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "\n",
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
