--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -48,7 +48,8 @@
         "model_init = \"\" #@param {type:\"string\"}\n",
         "models_dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
-        "SDZ_Dreambooth = False #@param {type:\"boolean\"}\n",
+        "SDZ_Dreambooth = \"\" #@param [\"\", \"SDZ_New_Dreambooth\", \"SDZ_Old_Dreambooth\"]\n",
+        "\n",
         "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -109,11 +110,40 @@
         "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "  %cd ..\n",
         "\n",
-        "  if SDZ_Dreambooth:\n",
+        "  if SDZ_Dreambooth == \"SDZ_New_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
+        "    \n",
+        "  elif SDZ_Dreambooth == \"SDZ_Old_Dreambooth\":\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "      !bash ./py310.sh -b -f -p /usr/local\n",
+        "      !python -m ipykernel install --name \"py310\" --user\n",
+        "      !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "      !pip install open-clip-torch\n",
+        "      !pip install triton\n",
+        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "    \n",
+        "    os.chdir(SDZ_install)\n",
+        "    shutil.rmtree(SDZ)\n",
+        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "    %cd stable-diffusion-webui\n",
+        "    !git checkout 7ba3923d5b494b7756d0b12f33acb3716d830b9a\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user_old.css -O user.css\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    %cd sd_dreambooth_extension\n",
+        "    !git checkout 65a4bdffc41b3ab44ec8262acce21c87d9a7fccf\n",
+        "    %cd ..\n",
+        "    %cd ..\n",
+        "\n",
+        "  else:\n",
+        "    SDZ_Dreambooth == \"\"\n",
+        "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  if SDZ_Big_Models:\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
