--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -135,6 +135,7 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user_old.css -O user.css\n",
         "    %cd extensions\n",
+        "    shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd sd_dreambooth_extension\n",
         "    !git checkout 65a4bdffc41b3ab44ec8262acce21c87d9a7fccf\n",
