--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -49,7 +49,7 @@
         "models_dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Dreambooth = \"\" #@param [\"\", \"SDZ_New_Dreambooth\", \"SDZ_Old_Dreambooth\"]\n",
-        "\n",
+        "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -105,11 +105,6 @@
         "    Download_Base_Model == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
-        "  %cd extensions\n",
-        "  !git clone https://github.com/Klace/stable-diffusion-webui-instruct-pix2pix.git\n",
-        "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "  %cd ..\n",
-        "\n",
         "  if SDZ_Dreambooth == \"SDZ_New_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
@@ -145,6 +140,21 @@
         "  else:\n",
         "    SDZ_Dreambooth == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "\n",
+        "  if SDZ_Extensions:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/Klace/stable-diffusion-webui-instruct-pix2pix.git\n",
+        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "    %cd ..\n",
+        "\n",
+        "  else:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    if os.path.exists('depthmap2mask'):\n",
+        "      shutil.rmtree('depthmap2mask')\n",
+        "      shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
+        "    %cd ..\n",
         "\n",
         "  if SDZ_Big_Models:\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
