--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -42,7 +42,8 @@
         "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
-        "gitclo = \"git clone --depth 1\" \n",
+        "#gitclo = \"git clone --depth 1\" \n",
+        "gitclo = \"git clone\" \n",
         "os.chdir(SDZ_install)\n",
         "\n",
         "model_init = \"\" #@param {type:\"string\"}\n",
@@ -105,6 +106,21 @@
         "    Download_Base_Model == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
+        "  if SDZ_Extensions:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/Klace/stable-diffusion-webui-instruct-pix2pix.git\n",
+        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "    %cd ..\n",
+        "\n",
+        "  else:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    if os.path.exists('depthmap2mask'):\n",
+        "      shutil.rmtree('depthmap2mask')\n",
+        "      shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
+        "    %cd ..\n",
+        "\n",
         "  if SDZ_Dreambooth == \"SDZ_New_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
@@ -123,14 +139,13 @@
         "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
         "    \n",
         "    os.chdir(SDZ_install)\n",
-        "    shutil.rmtree(SDZ)\n",
-        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "    %cd stable-diffusion-webui\n",
-        "    !git checkout e5690d0bf2da1f0719ca581cd2e797e9b74db67e\n",
+        "    !git checkout 1130d5df669911a5c67696be90bccca3ecf5f487\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user_old.css -O user.css\n",
         "    %cd extensions\n",
-        "    shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
+        "    if os.path.exists('stable-diffusion-webui-instruct-pix2pix'):\n",
+        "      shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd sd_dreambooth_extension\n",
         "    !git checkout f9900ccb3ce7025d1c89334e320a1c3b255bbd07\n",
@@ -140,21 +155,6 @@
         "  else:\n",
         "    SDZ_Dreambooth == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
-        "\n",
-        "  if SDZ_Extensions:\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    %cd extensions\n",
-        "    !git clone https://github.com/Klace/stable-diffusion-webui-instruct-pix2pix.git\n",
-        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "    %cd ..\n",
-        "\n",
-        "  else:\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    %cd extensions\n",
-        "    if os.path.exists('depthmap2mask'):\n",
-        "      shutil.rmtree('depthmap2mask')\n",
-        "      shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
-        "    %cd ..\n",
         "\n",
         "  if SDZ_Big_Models:\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
