--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -111,6 +111,8 @@
         "    %cd extensions\n",
         "    !git clone https://github.com/Klace/stable-diffusion-webui-instruct-pix2pix.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
+        "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "    %cd ..\n",
         "\n",
         "  else:\n",
