--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -11,23 +11,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Y9EBc437WDOs",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
-        "from IPython.display import clear_output\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "clear_output()\n",
-        "print('\u001b[1;32mDrive Conected ✓')"
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
@@ -51,6 +34,7 @@
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Dreambooth = \"\" #@param [\"\", \"SDZ_New_Dreambooth\", \"SDZ_Old_Dreambooth\"]\n",
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
+        "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -113,6 +97,72 @@
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
+        "    %cd ..\n",
+        "\n",
+        "  if SDZ_Upscaler:\n",
+        "    os.chdir(SDZ_webui_path+'/'+'models')\n",
+        "    %cd ESRGAN\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NMKD-BrightenRedux_200k.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NMKDDetoon_97500_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NMKD-YandereInpaint_375000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NoiseToner-Poisson-Detailed_108000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NoiseToner-Uniform-Detailed_100000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_CountryRoads_377000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_fatal_Anime_500000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_Fatality_Comix_260000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_foolhardy_Remacri.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_Nickelback_70000G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NickelbackFS_72000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Siax_200k.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKDSuperscale_Artisoft_120000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Superscale-Artisoftject_210000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Superscale-SP_178000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-UltraYandere_300k.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-UltraYandere-Lite_280k.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-YandereNeoXL_200k.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_RealisticRescaler_100000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_Valar_v1.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4xPSNR.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8x_NMKD-Superscale_150000_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8x_NMKD-Typescale_175k.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8xPSNR.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/16xPSNR.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/A_ESRGAN_Single.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/BSRGAN.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/BSRGANx2.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/BSRNet.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/LADDIER1_282500_G.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/lollypop.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/sudo_rife4_269.662_testV1_scale1.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/WaifuGAN_v3_30000.pth\n",
+        "    %cd ..\n",
+        "\n",
+        "    %cd GFPGAN\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.3.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.4.pth\n",
+        "    %cd ..\n",
+        "\n",
+        "    %cd LDSR\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/LDSR/model.ckpt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/LDSR/project.yaml\n",
+        "    %cd ..\n",
+        "\n",
+        "    %cd SwinIR\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x2.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x3.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x4.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x8.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DIV2K_s48w8_SwinIR-M_x2.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DIV2K_s48w8_SwinIR-M_x3.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DIV2K_s48w8_SwinIR-M_x4.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DIV2K_s48w8_SwinIR-M_x8.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/003_realSR_BSRGAN_DFO_s64w8_SwinIR-M_x2_GAN-with-dict-keys-params-and-params_ema.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/003_realSR_BSRGAN_DFOWMFC_s64w8_SwinIR-L_x4_GAN-with-dict-keys-params-and-params_ema.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_ClassicalSR_X2_64.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_ClassicalSR_X4_64.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_CompressedSR_X4_48.pth\n",
+        "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_RealworldSR_X4_64_BSRGAN_PSNR.pth\n",
+        "    %cd ..\n",
         "    %cd ..\n",
         "\n",
         "  else:\n",
@@ -187,6 +237,32 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Optional /// Connect Drive /// Download models with a link\n"
+      ],
+      "metadata": {
+        "id": "hYpSddVG05tn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y9EBc437WDOs",
+        "cellView": "form"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "from IPython.display import clear_output\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "clear_output()\n",
+        "print('\u001b[1;32mDrive Conected ✓')"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
@@ -212,7 +288,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
