--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -259,7 +259,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "clear_output()\n",
-        "print('\u001b[1;32mDrive Conected ✓')"
+        "print('\u001b[1;32mDrive Connected ✓')"
       ]
     },
     {
@@ -288,8 +288,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
