--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -99,8 +99,18 @@
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "    %cd ..\n",
         "\n",
+        "  else:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    if os.path.exists('depthmap2mask'):\n",
+        "      shutil.rmtree('depthmap2mask')\n",
+        "      shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
+        "    %cd ..\n",
+        "\n",
         "  if SDZ_Upscaler:\n",
         "    os.chdir(SDZ_webui_path+'/'+'models')\n",
+        "    if not os.path.exists('ESRGAN'):\n",
+        "      os.makedirs('ESRGAN')\n",
         "    %cd ESRGAN\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NMKD-BrightenRedux_200k.pth\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NMKDDetoon_97500_G.pth\n",
@@ -137,16 +147,22 @@
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/WaifuGAN_v3_30000.pth\n",
         "    %cd ..\n",
         "\n",
+        "    if not os.path.exists('GFPGAN'):\n",
+        "      os.makedirs('GFPGAN')\n",
         "    %cd GFPGAN\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.3.pth\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.4.pth\n",
         "    %cd ..\n",
         "\n",
+        "    if not os.path.exists('LDSR'):\n",
+        "      os.makedirs('LDSR')\n",
         "    %cd LDSR\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/LDSR/model.ckpt\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/LDSR/project.yaml\n",
         "    %cd ..\n",
         "\n",
+        "    if not os.path.exists('SwinIR'):\n",
+        "      os.makedirs('SwinIR')\n",
         "    %cd SwinIR\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x2.pth\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x3.pth\n",
@@ -163,14 +179,6 @@
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_CompressedSR_X4_48.pth\n",
         "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_RealworldSR_X4_64_BSRGAN_PSNR.pth\n",
         "    %cd ..\n",
-        "    %cd ..\n",
-        "\n",
-        "  else:\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    %cd extensions\n",
-        "    if os.path.exists('depthmap2mask'):\n",
-        "      shutil.rmtree('depthmap2mask')\n",
-        "      shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Dreambooth == \"SDZ_New_Dreambooth\":\n",
