--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -22,7 +22,7 @@
         "\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1\"]\n",
+        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "#gitclo = \"git clone --depth 1\" \n",
@@ -81,6 +81,10 @@
         "  if Download_Base_Model == \"V1.5\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "\n",
+        "  elif Download_Base_Model == \"V1.5.inpaint\":\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
+        "    os.chdir(SDZ_webui_path)\n",
         "    \n",
         "  elif Download_Base_Model == \"V2.1\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
@@ -96,14 +100,6 @@
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
-        "    %cd ..\n",
-        "\n",
-        "  else:\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    %cd extensions\n",
-        "    if os.path.exists('depthmap2mask'):\n",
-        "      shutil.rmtree('depthmap2mask')\n",
-        "      shutil.rmtree('stable-diffusion-webui-instruct-pix2pix')\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Upscaler:\n",
@@ -237,7 +233,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Optional /// Connect Drive /// Download models with a link\n"
+        "### Optional /// Connect Drive /// Download models with a link\n",
+        "\n",
+        " \n"
       ],
       "metadata": {
         "id": "hYpSddVG05tn"
