--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -22,7 +22,7 @@
         "\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V2.1\"]\n",
+        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "#gitclo = \"git clone --depth 1\" \n",
@@ -85,6 +85,10 @@
         "  elif Download_Base_Model == \"V1.5.inpaint\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "\n",
+        "  elif Download_Base_Model == \"V1.5.pix2pix\":\n",
+        "    !wget https://huggingface.co/timbrooks/instruct-pix2pix/resolve/main/instruct-pix2pix-00-22000.ckpt -O v15pix2pix.ckpt\n",
+        "    os.chdir(SDZ_webui_path)\n",
         "    \n",
         "  elif Download_Base_Model == \"V2.1\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
@@ -99,7 +103,8 @@
         "    %cd extensions\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
-        "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
+        "    !git clone https://github.com/Vetchems/sd-civitai-browser.git\n",
+        "    !git clone https://github.com/Vetchems/sd-model-preview.git\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Upscaler:\n",
