--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -87,7 +87,7 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  elif Download_Base_Model == \"V1.5.pix2pix\":\n",
-        "    !wget https://huggingface.co/timbrooks/instruct-pix2pix/resolve/main/instruct-pix2pix-00-22000.ckpt -O v15pix2pix.ckpt\n",
+        "    !wget https://huggingface.co/timbrooks/instruct-pix2pix/resolve/main/instruct-pix2pix-00-22000.safetensors -O v15pix2pix.safetensors\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    \n",
         "  elif Download_Base_Model == \"V2.1\":\n",
@@ -103,8 +103,16 @@
         "    %cd extensions\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
-        "    !git clone https://github.com/Vetchems/sd-civitai-browser.git\n",
+        "    !git clone https://github.com/etherealxx/sd-civitai-browser.git\n",
         "    !git clone https://github.com/Vetchems/sd-model-preview.git\n",
+        "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
+        "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
+        "\n",
+        "#    if os.path.exists('sd-civitai-browser'):\n",
+        "#     shutil.rmtree('sd-civitai-browser')\n",
+        "#    !$gitclo https://github.com/etherealxx/sd-civitai-browser.git\n",
+        "#    if not os.path.exists('sd-civitai-browser'):\n",
+        "#      !$gitclo https://github.com/etherealxx/sd-civitai-browser.git\n",
         "    %cd ..\n",
         "\n",
         "  if SDZ_Upscaler:\n",
@@ -212,7 +220,7 @@
         "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "    \n",
         "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
-        "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'/content/gdrive/MyDrive/sd/stable-diffusion-webui/webui.py\n",
+        "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "  else:\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
