--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -11,6 +11,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y9EBc437WDOs",
+        "cellView": "form"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "from IPython.display import clear_output\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "clear_output()\n",
+        "print('\u001b[1;32mDrive Connected ✓')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
@@ -103,10 +120,11 @@
         "    %cd extensions\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
-        "    !git clone https://github.com/etherealxx/sd-civitai-browser.git\n",
+        "#    !git clone https://github.com/etherealxx/sd-civitai-browser.git\n",
+        "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "    !git clone https://github.com/Vetchems/sd-model-preview.git\n",
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
-        "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
+        "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "\n",
         "#    if os.path.exists('sd-civitai-browser'):\n",
         "#     shutil.rmtree('sd-civitai-browser')\n",
@@ -242,23 +260,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Y9EBc437WDOs",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
-        "from IPython.display import clear_output\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "clear_output()\n",
-        "print('\u001b[1;32mDrive Connected ✓')"
-      ]
     }
   ],
   "metadata": {
