--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -82,6 +82,7 @@
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
         "  ############# Requirements SDZ\n",
+        "  !sed -i '$a fastapi==0.90.0' requirements_versions.txt\n",
         "\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
