--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -82,7 +82,7 @@
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
         "  ############# Requirements SDZ\n",
-        "  !sed -i '$a fastapi==0.90.0' requirements_versions.txt\n",
+        "#  !sed -i '$a fastapi==0.90.0' requirements_versions.txt\n",
         "\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
@@ -119,11 +119,12 @@
         "  if SDZ_Extensions:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
+        "#    !git clone https://github.com/etherealxx/sd-civitai-browser.git\n",
+        "#    !git clone https://github.com/Vetchems/sd-model-preview.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
-        "#    !git clone https://github.com/etherealxx/sd-civitai-browser.git\n",
+        "    !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
-        "    !git clone https://github.com/Vetchems/sd-model-preview.git\n",
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "\n",
